2025-11-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Perform more careful comparisons of the `unsigned char`
	values the formatter reads from input (or a token sequence) by
	promoting either the token or a character literal to which it is
	compared to `int` to (A) explicitly avoid issues with the
	implementation-defined signedness of unqualified `char`, and (B)
	lay foundation for future migration of GNU troff's internal
	character type to a custom, wider type.

	* src/roff/troff/div.cpp (return_request):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	* src/roff/troff/env.cpp (configure_tab_stops_request):
	* src/roff/troff/number.cpp (get_incr_number)
	(is_valid_expression, is_valid_term):
	* src/roff/troff/input.cpp (get_line_arg)
	(read_size)
	(is_conditional_expression_true):
	Construct integer from character literal.
	* src/roff/troff/env.cpp (adjust):
	* src/roff/troff/reg.cpp (assign_register_format_request):
	* src/roff/troff/number.cpp (is_valid_term):
	* src/roff/troff/input.cpp (is_conditional_expression_true):
	* src/roff/troff/input.cpp (is_conditional_expression_true)
	(read_drawing_command):
	Store return value of `tok.ch()` in local variable of `int`, not
	`char`, type.
	* src/roff/troff/env.cpp: Retype global `TAB_REPEAT_CHAR` from
	{`const`} `char` to `unsigned char`.
	* src/roff/troff/input.cpp (read_size): Use local variables to
	avoid repeated member function calls.  (Presumably a smart
	optimizer would do the equivalent on its own, but this change
	also makes a lengthy compound conditional expression shorter.)

2025-11-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Fix code style nit;
	compare integer-valued variable to integer literal instead of
	letting it pun down to a Boolean.

2025-11-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_get_long_name, read_size):